--- a/Assignment7.ipynb
+++ b/Assignment7.ipynb
@@ -512,7 +512,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By normalizing the ratings, we have adjusted the values to a notionally common scale, in order to reduce data redundancy and improve data integrity. Normalization often makes indexing easier, and accounts for outliers and duplicates."
+    "### Conclusion\n",
+    "By normalizing the ratings, we have adjusted the values to a notionally common scale, in order to reduce data redundancy and improve data integrity. Normalization often makes indexing easier, and accounts for outliers and duplicates.\n"
    ]
   }
  ],
